--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,8 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
+    <link href="/dist/output.css" rel="stylesheet">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -25,10 +27,9 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <!-- <<<<<<< HEAD -->
-    <title>scissor | URL Shortening API | </title>
-    <!-- ======= -->
-    <title>scissor | URL shortener</title>
-    <!-- >>>>>>>  -->
+    <title>Scissor URL Shortening API | CapStone Project</title>
+    <title>CapStone Project | Scissor URL shortening API Challenge</title>
+    <!-- >>>>>>> 8f6a104fb66c0a9d977e198f02176e7808f062cd -->
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
